--- a/TinDog+Start+Here/TinDog Start Here/css/styles.css
+++ b/TinDog+Start+Here/TinDog Start Here/css/styles.css
@@ -1,14 +1,23 @@
+h1, h2, h3, h4, h5, h6{
+  font-family: 'Montserrat-Black', sans-serif;
+  line-height: 1.5;
+}
+
+h2 {
+  padding: 0 10% 0 10%;
+  font-weight: 900;
+  font-size:3rem;
+}
+
+.big-heading{
+  font-weight: 900;
+  font-size: 5rem;
+}
+
 #title {
   background-color: #ff4c68;
   font-family: 'Montserrat-Black', sans-serif;
   color: white;
-}
-
-h1{
-  font-family: 'Montserrat-Black', sans-serif;
-  font-weight: 900;
-  font-size: 5rem;
-  line-height: 1.5;
 }
 
 .brand{
@@ -18,12 +27,9 @@ h1{
 }
 
 .external{
-  padding: 3% 15%;
+  padding: 3% 15% 7%;
 }
 
-.internal{
-  padding-left: 0;
-}
 
 /* navbar */
 .navbar{
@@ -46,13 +52,18 @@ h1{
 
 /* title image */
 .title-image{
-  width: 60%;
+  width: 22%;
+  position: absolute;
   transform: rotate(25deg);
+  left: 55%;
 }
+
 
 /* feature icon */
 #features{
   padding: 7% 15%;
+  position: relative;
+  background-color: white;
 }
 
 .feature-box{
@@ -82,18 +93,13 @@ h1{
 
 /* testimonial */
 #testimonials {
-  padding: 7% 15%;
   text-align: center;
   background-color: #ef8172;
   color: white;
 }
 
-h2 {
-  font-family: "Montserrat-Bold";
-  padding: 0 10% 0 10%;
-  font-weight: 900;
-  font-size:3rem;
-  line-height: 1.5;
+.carousel-inner{
+  padding: 7% 15%;
 }
 
 .testimonial-image{
@@ -111,4 +117,63 @@ h2 {
 .press-logo{
   width: 15%;
   margin: 20px 20px 50px 20px;
+}
+
+/* Pricing */
+#pricing{
+  padding: 100px;
+  text-align: center;
+}
+
+.pricing-column{
+  padding: 3% 2%;
+}
+
+
+@media (max-width:1200px){
+  .title-image{
+    position: static;
+    display: block;
+    transform: rotate(0deg);
+    text-align: center;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  #title{
+    text-align: center;
+  }
+
+}
+
+/* cta */
+#cta{
+  background-color: #ff4c68;
+  font-family: 'Montserrat-Black', sans-serif;
+  color: white;
+  text-align: center;
+  padding: 3%
+}
+
+.cta{
+  font-size: 3.5rem;
+  font-weight: bold;
+  padding-left: 20%;
+  padding-right: 20%;
+  line-height: 1.5;
+}
+
+/* footer */
+#footer{
+  text-align: center;
+  background-color: #fff;
+  padding-bottom: 5%;
+  padding-top: 4%;
+
+}
+
+.footer-icon{
+  font-size: 1.5rem;
+  padding: 40px 10px 20px;
 }
